--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-CairoSVG==2.5.2
-captum==0.4.1
-chess==1.8.0
-click==8.0.3
-matplotlib==3.5.1
-numpy==1.21.5
-pandas==1.3.5
-Pillow==9.2.0
-PyYAML==6.0
-stockfish==3.22.0
-torch==1.8.2+cu111
+CairoSVG
+captum
+chess
+click
+matplotlib
+numpy
+pandas
+Pillow
+PyYAML
+stockfish
+torch
+pytest
